# wasm2evm-2

./: .gitignore  Cargo.toml  add.wasm
spec-test-runner/: Cargo.toml
spec-test-runner/src/: crash.rs  error.rs  parser.rs  runner.rs  wast.rs
spec-test-runner/src/crash-tester/: main.rs
spec-test-runner/wasm-testsuite/: i32.wast
spec-test/src/: runner.rs
src/: main.rs  revm.rs  revm_run.rs
wain-exec/: Cargo.toml
wain-exec/src/: lib.rs  revm_run.rs  runtime.rs  value.rs
wasm-reader/: Cargo.toml  fib.wasm
wasm-reader/src/: lib.rs
